<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/green_background"
    tools:context="com.raivogaming.vegescanner.StartActivity"
    tools:layout_editor_absoluteY="25dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TuoteTutka"
        android:textColor="#FFF"
        android:textSize="40sp"
        android:id="@+id/startHeaderTextView"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/startHelloTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startWelcomeText"
        android:textColor="#FFF"
        android:textSize="15sp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/startHeaderTextView"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/startAlreadyAccountButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/I_already_have_an_account"
        android:textColor="#FFF"
        android:background="@drawable/transparent_button_withborder"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/startNotYetAccountButton" />

    <Button
        android:id="@+id/startNotYetAccountButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="#FFF"
        android:background="@drawable/transparent_button_withborder"
        android:text="@string/I_need_new_account"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="40dp" />

</android.support.constraint.ConstraintLayout>
