<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/green_background"
    android:layout_height="match_parent"
    tools:context="com.raivogaming.vegescanner.RegisterActivity">

    <TextView
        android:id="@+id/createNewAccountText"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="REKISTERÖIDY"
        android:textColor="#FFF"
        android:textSize="25sp"/>

    <EditText
        android:drawableLeft="@drawable/ic_user_black"
        android:drawablePadding="5dp"
        android:background="@drawable/edittext_rounded_corners_top"
        android:padding="12dp"
        android:layout_marginTop="20dp"
        android:textColorHint="#666666"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_below="@id/createNewAccountText"
        android:id="@+id/registerUsernameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:inputType="text" />

    <View
        android:id="@+id/registerPageDividerOne"
        android:layout_below="@id/registerUsernameField"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="#000"/>

    <EditText
        android:drawableLeft="@drawable/ic_email"
        android:drawablePadding="5dp"
        android:background="#FFF"
        android:textColorHint="#666666"
        android:padding="12dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_below="@id/registerPageDividerOne"
        android:id="@+id/registerEmailField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/emailaddress"
        android:inputType="textEmailAddress" />

    <View
        android:id="@+id/registerPageDividerTwo"
        android:layout_below="@id/registerEmailField"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="#000"/>

    <EditText
        android:drawableLeft="@drawable/ic_lock"
        android:drawablePadding="5dp"
        android:background="@drawable/edittext_rounded_corners_bottom"
        android:textColorHint="#666666"
        android:padding="12dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_below="@id/registerPageDividerTwo"
        android:id="@+id/registerPasswordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/salasana"
        android:inputType="textPassword" />


    <Button
        android:id="@+id/registerRegisterButton"
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/registerPasswordField"
        android:layout_alignEnd="@id/registerPasswordField"
        android:layout_height="wrap_content"
        android:text="Rekisteröidy"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="#FFF"
        android:background="@drawable/transparent_button_withborder" />

    <ProgressBar
        android:id="@+id/registerProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        />

    <TextView
        android:id="@+id/registeringText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/registerProgressBar"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:textColor="#FFF"
        android:text="Rekisteröidytään \n    odota hetki..." />

    <LinearLayout
        android:id="@+id/registerpage_tologinpagetext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:gravity="center"
        android:layout_below="@id/registerRegisterButton"
        android:layout_marginTop="60dp"
        android:onClick="toLoginPage">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFF"
            android:textSize="15sp"
            android:text="Minulla on jo tili "/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFF"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="Kirjaudu sisään "/>

    </LinearLayout>

</RelativeLayout>
